fixed spacing between FAQ title container and FAQ answer

--- a/css/main.css
+++ b/css/main.css
@@ -314,17 +314,17 @@ body {
         width: 100%; } }
 
 .faq {
-  min-height: 700px;
+  min-height: 800px;
   background: #000000;
   color: #ffffff;
   padding: 6rem 4rem;
   display: grid;
   grid-template-columns: 1fr 70% 1fr;
-  grid-auto-rows: min-content;
+  grid-auto-rows: auto;
   border-bottom: 6px solid #333333; }
   @media only screen and (max-width: 600px) {
     .faq {
-      min-height: 400px;
+      min-height: 600px;
       padding: 4rem 1rem;
       grid-template-columns: 1fr; } }
   .faq__title {
@@ -355,6 +355,9 @@ body {
       background: #303030;
       margin-bottom: .1rem;
       padding: 2rem 4rem; }
+      @media only screen and (max-width: 600px) {
+        .faq__content-title-container {
+          margin-bottom: .2rem; } }
     .faq__content-title {
       font-size: 2.5rem;
       font-weight: 400; }
