--- a/sass/_faq.scss
+++ b/sass/_faq.scss
@@ -1,15 +1,15 @@
 .faq {
-   min-height: 700px;
+   min-height: 800px;
    background: $color-black;
    color: $color-white;
    padding: 6rem 4rem;
    display: grid;
    grid-template-columns: 1fr 70% 1fr;
-   grid-auto-rows: min-content;
+   grid-auto-rows: auto;
    border-bottom: 6px solid $color-grey;
 
    @media only screen and (max-width: 600px) {
-      min-height: 400px;
+      min-height: 600px;
       padding: 4rem 1rem;
       grid-template-columns: 1fr;
    }
@@ -49,6 +49,10 @@
          background: #303030;
          margin-bottom: .1rem;
          padding: 2rem 4rem;
+
+         @media only screen and (max-width: 600px) {
+            margin-bottom: .2rem;
+         }
       }
 
       &-title {
